# drug-safety-signal-agent

./: .env.example  .gitignore  .meddra_llt_cache.json  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
agent/: agent.py  os_client.py  pipeline.py
agent/tools/: anomaly_signals.py  bcpnn.py  ebgm.py  investigator_tools.py  openfda.py  opensearch_mcp.py  prr.py  pubmed.py  signal_memory.py
app/: server.py
app/static/: index.html
config/: brand_aliases.yaml  comparators.yaml
ingestion/: compute_class_ratio.py  discover_comparators.py  download_faers.sh  download_faers_historical.sh  faers_indexer.py  faers_zip_indexer.py  register_mcp_tools.py  setup_anomaly_detector.py
scripts/: benchmark_benchmark_semaglutide_comparison.csv  benchmark_rofecoxib_comparison.csv  benchmark_rofecoxib_ours.csv  benchmark_rofecoxib_reference.csv  benchmark_semaglutide_comparison.csv  benchmark_semaglutide_ours.csv  benchmark_semaglutide_reference.csv  benchmark_vs_openvigil.py  benchmark_warfarin_comparison.csv  benchmark_warfarin_ours.csv  benchmark_warfarin_reference.csv
tests/: test_anomaly_signals.py  test_bcpnn.py  test_classification_parser.py  test_ebgm.py  test_label_matching.py  test_mh.py  test_ml_layer.py  test_pipeline_smoke.py  test_prr.py  test_prr_ci.py  test_ror.py  test_trend_detection.py
