[project]
name = "drug-safety-signal-agent"
version = "0.1.0"
description = "Local drug safety signal detection using OpenSearch + Gemma4"
requires-python = ">=3.11"
dependencies = [
    # LangGraph — agent pipeline framework (MIT)
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    # OpenSearch client (Apache 2.0, ES-compatible API)
    "opensearch-py[async]>=2.7.0",
    # HTTP client for openFDA + PubMed
    "httpx>=0.27.0",
    # LiteLLM for local model runner
    "litellm>=1.40.0",
    # Phoenix observability (optional but included)
    "arize-phoenix[otel]>=4.0.0",
    "openinference-instrumentation-litellm>=0.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "ingestion"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
