[project]
name = "drug-safety-signal-agent"
version = "0.1.0"
description = "Local drug safety signal detection using OpenSearch + Qwen3.5"
requires-python = ">=3.11"
dependencies = [
    # LangGraph — agent pipeline framework (MIT)
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    # OpenSearch client (Apache 2.0, ES-compatible API)
    "opensearch-py[async]>=2.7.0",
    # HTTP client for openFDA + PubMed
    "httpx>=0.27.0",
    # LiteLLM for local model runner
    "litellm>=1.40.0",
    # Phoenix observability (optional but included)
    "arize-phoenix[otel]>=4.0.0",
    "openinference-instrumentation-litellm>=0.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "polars>=1.41.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "langchain-google-genai>=4.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "ingestion", "app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
